# raymarch

./: .gitignore  Cargo.toml  readme.md
Docs/: devlog.md  features.md  references.md  todo_features.md  todo_scenes.md  todo_tech_build.md  todo_tech_use.md
src/: bdg_color.rs  camera.rs  cameras.rs  cast.rs  color.rs  crayola_color.rs  main.rs  math.rs  operators.rs  scene.rs  sdf.rs  sky.rs  xkcd_color.rs
src/cameras/: camera.rs  orthographic.rs  perspective.rs
src/geom/: capsule.rs  cone.rs  container.rs  cubebox.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs  torus.rs  translate.rs  triangle_mesh.rs
src/lights/: ambient.rs  cone.rs  directional.rs  lightsource.rs  mod.rs  point.rs
src/operators/: boolean.rs
src/scene/: test_scenes.rs
src/shaders/: checker.rs  diffuse.rs  distance_fade.rs  flat.rs  graphpaper.rs  mod.rs  noise.rs  reflective.rs  shader.rs  specular.rs
tools/: crayola_color.txt  make_crayola.py  make_movie.sh  make_xkcd_colors.py  xkcd_color.txt
