[package]
name = "raymarch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"]}
crossbeam = "0.8"
crossbeam-channel = "0.5.6"
image = "0.24.3"
num_cpus = "1.0"

